--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
-name: flutter_circular_chart
+name: awesome_circular_chart
 description: Animated radial and pie charts for Flutter
-version: 0.1.0
-author: Victor Choueiri <victor.oc@gmail.com>
-homepage: https://github.com/xqwzts/flutter_circular_chart
+version: 1.0.0
+homepage: https://github.com/xjodoin/flutter_awesome_circular_chart
 
 dependencies:
   flutter:
@@ -13,4 +12,4 @@ dev_dependencies:
     sdk: flutter
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
