Compatible upgrade to Flutter 3.22.0

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: awesome_circular_chart
 description: Animated radial and pie charts for Flutter
-version: 1.0.0
+version: 1.0.1
 homepage: https://github.com/xjodoin/flutter_awesome_circular_chart
 
 dependencies:
@@ -12,4 +12,4 @@ dev_dependencies:
     sdk: flutter
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=3.4.1 <4.0.0"
