--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: awesome_circular_chart
+name: flutter_awesome_circular_chart
 description: Animated radial and pie charts for Flutter
 version: 1.1.0
 homepage: https://github.com/xjodoin/flutter_awesome_circular_chart
